# love

./: .gitignore  README.md  love.cabal  parsing-tests.cabal
app/: IR.hs  Main.hs  Parser.hs
app/Core/Closure/: Conversion.hs  Types.hs
app/Core/Closure/Types/: Closure.hs  Pretty.hs
app/Core/Compiler/: Translation.hs  Types.hs
app/Core/Compiler/Types/: IR.hs  Javascript.hs
app/Core/Import/: Mapping.hs  Resolver.hs
app/Core/Parser/: AST.hs  Parser.hs
app/Core/Parser/AST/: Definition.hs  Pretty.hs
app/Core/Utility/: Color.hs
tests/: example  example.love  helloworld.love
