cabal-version:      2.4
name:               love
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             thomasvergne
maintainer:         thomas.vergne.contact@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable parsing-tests
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      -- Parser related
      Core.Parser.Parser
      Core.Parser.AST
        Core.Parser.AST.Definition
        Core.Parser.AST.Pretty

      -- Import related
      Core.Import.Mapping
      Core.Import.Resolver

      -- Closure conversion related
      Core.Closure.Types
        Core.Closure.Types.Closure
        Core.Closure.Types.Pretty
      Core.Closure.Conversion

      -- Utility related
      Core.Utility.Color

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0
      , parsec
      , containers
      , directory
      , filepath
      , mtl
    hs-source-dirs:   app
    default-language: Haskell2010
